# cpp-lite-sockets

./: .gitignore  LICENSE  README.md
include/cpp-lite-sockets/: cpp-lite-sockets.hpp
tests/unit-tests/: CMakeLists.txt  run-tests.cmd  run-tests.sh  tests-common.h  tests-sockaddr_wrap.cpp  tests-socket-create.cpp  tests-tcp-server.cpp  tests-udp-server.cpp  unit-tests.sln  unit-tests.vcxproj  unit-tests.vcxproj.filters
